--- a/portfolio.html
+++ b/portfolio.html
@@ -5,27 +5,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ritesh Thakur | Data Analyst Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
+    * {
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
     body {
       font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
-      background: #f5f7fa;
+      background: linear-gradient(to bottom right, #e0f7fa, #f5f7fa);
       color: #333;
     }
     header {
-      background: #0a192f;
+      background: linear-gradient(90deg, #0a192f, #112240);
       color: #fff;
-      padding: 2rem;
+      padding: 3rem 2rem;
       text-align: center;
+      position: relative;
     }
     header h1 {
       margin: 0;
-      font-size: 2.5rem;
+      font-size: 3rem;
     }
     header p {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
       margin-top: 0.5rem;
+    }
+    .download-btn {
+      display: inline-block;
+      padding: 0.75rem 1.5rem;
+      background: #64ffda;
+      color: #0a192f;
+      text-decoration: none;
+      border-radius: 5px;
+      font-weight: bold;
+      margin-top: 1rem;
+      transition: background 0.3s;
+    }
+    .download-btn:hover {
+      background: #52e0c4;
     }
     nav {
       background: #112240;
@@ -33,22 +53,38 @@
       justify-content: center;
       gap: 2rem;
       padding: 1rem;
+      position: sticky;
+      top: 0;
+      z-index: 10;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
     nav a {
       color: #64ffda;
       text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #ffffff;
     }
     section {
-      max-width: 800px;
+      max-width: 900px;
       margin: 2rem auto;
-      padding: 1rem;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      padding: 2rem;
+      background: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
     h2 {
       color: #0a192f;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      border-bottom: 2px solid #64ffda;
+      padding-bottom: 0.5rem;
+    }
+    h3 {
+      color: #112240;
+      margin-top: 1.5rem;
     }
     ul li {
       margin-bottom: 0.5rem;
@@ -60,15 +96,16 @@
       color: #fff;
       margin-top: 2rem;
     }
-    .download-btn {
-      display: inline-block;
-      padding: 0.75rem 1.5rem;
-      background: #64ffda;
-      color: #0a192f;
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    ul li a {
+      color: #0077b6;
       text-decoration: none;
-      border-radius: 5px;
-      font-weight: bold;
-      margin-top: 1rem;
+    }
+    ul li a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -76,7 +113,7 @@
   <header>
     <h1>Ritesh Thakur</h1>
     <p>Data Analyst | AI Specialist | Dashboard Developer</p>
-    <a class="download-btn" href="Ritesh_Thakur_Resume.pdf" download>Download CV</a>
+    <a class="download-btn" href="Ritesh_Thakur_Resume.pdf" download><i class="fa-solid fa-file-arrow-down"></i> Download CV</a>
   </header>
 
   <nav>
@@ -122,9 +159,9 @@
   <section id="contact">
     <h2>Contact</h2>
     <ul>
-      <li>Email: <a href="mailto:ritesh.thakur70@gmail.com">ritesh.thakur70@gmail.com</a></li>
-      <li>Phone: +44 7867 216814</li>
-      <li>LinkedIn: <a href="https://www.linkedin.com/in/ritesh-thakur24" target="_blank">ritesh-thakur24</a></li>
+      <li><i class="fa-solid fa-envelope"></i> <a href="mailto:ritesh.thakur70@gmail.com">ritesh.thakur70@gmail.com</a></li>
+      <li><i class="fa-solid fa-phone"></i> +44 7867 216814</li>
+      <li><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/ritesh-thakur24" target="_blank">ritesh-thakur24</a></li>
     </ul>
   </section>
 
