--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
       color: #333;
     }
     header {
-      background: linear-gradient(90deg, #0a192f, #112240);
+      background: linear-gradient(90deg, #0a192f, #131e30);
       color: #fff;
       padding: 3rem 2rem;
       text-align: center;
@@ -141,20 +141,29 @@
   <section id="projects">
     <h2>Projects</h2>
     <h3>Image Classification using Vision Transformer</h3>
-    <p>Developed a Vision Transformer (ViT) using TensorFlow, achieving 60% validation accuracy on a flower dataset with 5 categories. Improved model efficiency with hyperparameter tuning and data augmentation.</p>
-
+    <p> Implemented a Vision Transformer (ViT) architecture using TensorFlow, which resulted in achieving a 60% validation accuracy on a complex flower dataset. This project showcased the eﬀectiveness of ViTs in handling image classification tasks typically dominated by convolutional Neural Networks.</p>
+    <p>Classified 5000+ flower images into 5 categories, demonstrating the potential of ViTs as an alternative to CNNs for computer vision tasks. This demonstrated the robust capabilities of Vision Transformers in performing high-accuracy classifications, indicating their potential as a viable alternative to traditional CNN approaches for various computer vision tasks.</p>
+    <p>Improved the training eﬃciency of the model by 20% through meticulous hyper-parameter optimization and the application of data augmentation techniques. This optimization process ensured faster convergence and more accurate results, proving critical for handling large and complex datasets.</p>
+    
     <h3>E-commerce Website</h3>
     <p>Created a full-stack e-commerce site using PHP, MySQL, HTML, CSS, Bootstrap, and JavaScript. Optimized backend for 1,000+ records and enhanced frontend usability by 30%.</p>
+    <p>Created a sleek and responsive front-end design with HTML, CSS, JavaScript, and Bootstrap, enhancing user experience and increasing site engagement by 30%.</p>
+    <p>Application of XAMPP to streamline local development, reducing setup time by 50% and improving development eﬃciency. Implemented a secure user registration and login mechanism, storing 500+ usernames and hashed passwords, ensuring data security and integrity.</p>
   </section>
 
   <section id="experience">
     <h2>Experience</h2>
     <h3>DHL Global Services (India) LLP</h3>
-    <p>Automated document processing using Python and Excel VBA. Designed dashboards for internal tracking, improving process speed by 30%.</p>
+    <p>Developed a Python-based tool to scrutinize 500+ import documents, ensuring compliance with import regulations. </p>
+    <p>Reduced process turnaround time by 50% and minimized manual errors by automating discrepancy identification.</p>
+    <p>Utilized advanced Excel functions and VBA (Visual Basic for Applications) to create automated workflows for document reviews and cross-checks. Setting up automated data validation and error-checking mechanisms.</p>
+    <p>Designed automated Excel dashboards with dynamic data connections, improving internal communication and tracking, boosting eﬃciency by 30%. By developing Excel templates with embedded formulas and conditional formatting, I conducted thorough reviews and cross-checks. This stream</p>
 
     <h3>Shraddha Shipping & Logistics</h3>
-    <p>Built Power BI dashboards and automated workflows using Python, enabling cost reduction and better supply chain transparency.</p>
-  </section>
+    <p>Developed interactive dashboards using Power BI to visualize key supply chain metrics, improving decision-making speed by 30% and enhancing data transparency across departments.</p>
+    <p>Automated data processing workflows with Python, reducing data preparation time by 40%, and enabled real-time analysis of inventory levels, demand forecasts, and supplier performance.</p>
+    <p>Conducted in-depth data analysis to identify trends and anomalies in supply chain operations, leading to a 15% reduction in costs through optimized inventory management strategies.</p>
+</section>
 
   <section id="contact">
     <h2>Contact</h2>
